@@ -1,10 +1,9 @@
 requires 'perl' => '5.010001';
 requires 'List::Util';
-requires 'Minion' => '8.0';
+requires 'Minion' => '9.0';
 requires 'Mojolicious' => '7.29';
 requires 'Mojo::SQLite' => '3.000';
 requires 'Sys::Hostname';
 requires 'Time::HiRes';
 suggests 'Mojo::JSON::MaybeXS';
 test_requires 'Test::More' => '0.88';
-author_requires 'Minion' => '8.04';
